--- a/amunWebServer/templates/home.html
+++ b/amunWebServer/templates/home.html
@@ -12,6 +12,6 @@
     <title></title>
 </head>
 <body>
-    <button onclick="test()">test</button>
+    <button onclick="test()">light switch</button>
 </body>
 </html>
