--- a/amunWebServer/templates/home.html
+++ b/amunWebServer/templates/home.html
@@ -21,12 +21,14 @@
         update();
     }
 
-    
+
+
 
     
 </script>
 <html lang="en">
 <head>
+    <h1 style="font-size:100px">Color Picker!</h1>
     <meta charset="utf-8" />
     <title></title>
 </head>
