--- a/amunWebServer/templates/home.html
+++ b/amunWebServer/templates/home.html
@@ -22,7 +22,19 @@
     }
 
 
+    function dec(){
+        xhttp = new XMLHttpRequest();
+        xhttp.open("POST", "dec", true)
+        
+        xhttp.send();
+    }
 
+    function inc(){
+        xhttp = new XMLHttpRequest();
+        xhttp.open("POST", "inc", true)
+        
+        xhttp.send();
+    }
 
     
 </script>
@@ -37,5 +49,7 @@
     <input type="range" id="redSlider" min="0" max="255" value="0" onchange="rgbUpdate()">
     <input type="range" id="greenSlider" min="0" max="255" value="0" onchange="rgbUpdate()">
     <input type="range" id="blueSlider" min="0" max="255" value="0" onchange="rgbUpdate()">
+    <button onclick="inc()">inc</button>
+    <button onclick="dec()">dec</button>
 </body>
 </html>
